# tao-staking

./: .cursorignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  utils.py
app/api/v1/: __init__.py  tao_dividends.py
app/clients/: bittensor.py  cache.py  chutes.py  desearch.py  mongodb.py  wallet.py
app/middleware/: auth.py
app/models/: dividend.py  sentiment_staking_result.py
app/tasks/: sentiment_staking_task.py  worker.py
load_testing/: locustfile.py
observability/dashboards/: main.json
observability/otel/: otel-collector-config.yaml
observability/prometheus/: prometheus.yml
tests/api/v1/: test_sentiment_staking_task.py  test_tao_dividends.py
tests/clients/: test_auth_middleware.py  test_bittensor_client.py  test_cache_client.py  test_chutes_client.py  test_desearch_client.py  test_wallet_client.py
tests/models/: test_dividend_models.py  test_sentiment_staking_result_model.py
