[project]
name = "tao"
version = "0.1.0"
description = "Tao Staking API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "redis>=5.0.1",
    "motor>=3.3.2",
    "slowapi>=0.1.9",
    "bittensor>=6.9.2",
    "typer>=0.9.0",
    "desearch-py>=1.0.0",
    "httpx>=0.28.1",
    "bittensor-cli>=9.4.0",
    "celery>=5.5.2",
    "flower>=2.0.1",
]

[project.scripts]
tao-api = "uvicorn:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
